--- a/src/css/aboutUs.css
+++ b/src/css/aboutUs.css
@@ -2,9 +2,12 @@
     .about-us{
         display: inline-block;
         width: 100%;
-        height: 985px;
         background-color: rgb(248, 250, 250);
     }
+
+    .about-us__wrapper {
+        padding: 123px 0px;
+    } 
       
     .about-us__text-header{
         display: flex;
@@ -21,6 +24,7 @@
         grid-template-columns: repeat(2, 1fr);
         justify-content: center;
         column-gap: 115px;
+        margin-bottom: 17px;
     }
       
     .about-us__image{
@@ -54,16 +58,15 @@
         text-transform: uppercase;
         font-family: 'Montserrat', sans-serif;
         font-size: 38px;
-        margin-top: 124px;
         margin-bottom: 12px;
     }
 
     .top-right-text-header{
-        margin-top: 25px;
+        margin-top: 27px;
         margin-bottom: 18px;
-        font-size: 20px;
+        font-size: 19px;
         line-height: 1.3;
-        letter-spacing: 1.1px;
+        letter-spacing: 1.8px;
         font-family: "Merriweather";
         font-weight: bold;
         text-transform: uppercase;
@@ -110,18 +113,22 @@
     .about-us{
         display: inline-block;
         width: 100%;
-        height: 1280px;
         background-color: rgb(248, 250, 250);
     }
+
+    .about-us__wrapper {
+        padding: 100px 70px;
+    } 
       
     .about-us__text-header{
         display: flex;
         flex-direction: column;
         flex-wrap: wrap;
-        justify-content: flex-start;
+        justify-content: center;
         align-items: center;
         align-content: stretch;
         margin-bottom: 25px;
+        padding: 0px 70px;
     }
 
     .about-us__main-content{
@@ -141,6 +148,7 @@
         font-size: 18px;
         letter-spacing: 1px;
         margin-bottom: 22px;
+        text-align: center;
     }  
     
     .text-font-merriweather-little{
@@ -159,7 +167,6 @@
         text-transform: uppercase;
         font-family: 'Montserrat', sans-serif;
         font-size: 38px;
-        margin-top: 124px;
         margin-bottom: 12px;
     }
 
@@ -214,8 +221,19 @@
     .about-us{
         display: inline-block;
         width: 100%;
-        height: 1280px;
         background-color: rgb(248, 250, 250);
+    }
+
+    .about-us__wrapper {
+        padding: 100px 70px;
+    } 
+
+    .image-show-featured-works {
+        position: absolute;
+        width: 480px;
+        height: 490px;
+        z-index: 37;
+        transform: translate(-240px, -750px);
     }
       
     .about-us__text-header{
@@ -229,8 +247,12 @@
     }
 
     .about-us__main-content{
-        display: grid;
+        display: flex;
+        flex-direction: column;
+        flex-wrap: nowrap;
         justify-content: center;
+        align-items: center;
+        align-content: center;
     }
       
     .about-us__image{
@@ -264,7 +286,6 @@
         text-transform: uppercase;
         font-family: 'Montserrat', sans-serif;
         font-size: 38px;
-        margin-top: 65px;
         margin-bottom: 12px;
     }
 
@@ -277,6 +298,7 @@
         font-family: "Merriweather";
         font-weight: bold;
         text-transform: uppercase;
+        text-align: center;
     }
       
     .top-right-text-small{
@@ -319,9 +341,12 @@
     .about-us{
         display: inline-block;
         width: 100%;
-        height: 1200px;
         background-color: rgb(248, 250, 250);
     }
+
+    .about-us__wrapper {
+        padding: 70px 50px;
+    } 
       
     .about-us__text-header{
         display: flex;
@@ -334,8 +359,12 @@
     }
 
     .about-us__main-content{
-        display: grid;
+        display: flex;
+        flex-direction: column;
+        flex-wrap: nowrap;
         justify-content: center;
+        align-items: center;
+        align-content: center;
     }
       
     .about-us__image{
@@ -370,7 +399,6 @@
         text-transform: uppercase;
         font-family: 'Montserrat', sans-serif;
         font-size: 38px;
-        margin-top: 65px;
         margin-bottom: 12px;
     }
 
@@ -392,7 +420,7 @@
         color: rgba(0, 0, 0, 0.741);
         line-height: 1.75;
         letter-spacing: 0.1px;
-        text-align: center;
+        text-align: left;
     }
     
     .top-right-text-small-lvl-2{
@@ -404,7 +432,7 @@
         margin-top: 32px;
         position: relative;
         bottom: 5px;
-        text-align: center;
+        text-align: left;
     }
 
     .why-we-are-the-great{
@@ -429,9 +457,12 @@
     .about-us{
         display: inline-block;
         width: 100%;
-        height: 940px;
         background-color: rgb(248, 250, 250);
     }
+
+    .about-us__wrapper {
+        padding: 70px 50px;
+    } 
       
     .about-us__text-header{
         display: flex;
@@ -444,8 +475,12 @@
     }
 
     .about-us__main-content{
-        display: grid;
+        display: flex;
+        flex-direction: column;
+        flex-wrap: nowrap;
         justify-content: center;
+        align-items: center;
+        align-content: center;
     }
       
     .about-us__image{
@@ -482,7 +517,6 @@
         text-transform: uppercase;
         font-family: 'Montserrat', sans-serif;
         font-size: 36px;
-        margin-top: 65px;
         margin-bottom: 12px;
     }
 
@@ -499,25 +533,24 @@
     }
       
     .top-right-text-small{
-        font-size: 12px;
+        font-size: 13.5px;
         font-family: 'Raleway', sans-serif;
         color: rgba(0, 0, 0, 0.741);
+        line-height: 1.75;
         letter-spacing: 0.1px;
-        font-weight: bold;
-        text-align: center;
+        text-align: left;
     }
     
     .top-right-text-small-lvl-2{
         line-height: 1.7;
         letter-spacing: 0.1px;
-        font-size: 12px;
+        font-size: 14px;
         font-family: 'Raleway', sans-serif;
         color: rgba(0, 0, 0, 0.741);
         margin-top: 32px;
         position: relative;
         bottom: 5px;
-        text-align: center;
-        font-weight: bold;
+        text-align: left;
     }
 
     .why-we-are-the-great{
