--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,6 +1,13 @@
 .flag-text{
     background: #c6f0ee;
 }
+
+.header__btn:hover {
+    border-radius: 10px;
+    border-color: rgb(118, 244, 234);;
+}
+
+
 @media (min-width: 1150px) and (max-width: 1900px)  { 
     header {
         width: 100%;
@@ -48,7 +55,7 @@
         font-family: 'Montserrat', sans-serif;
         color: rgba(0, 0, 0, 0.749);
         text-transform: uppercase;
-        padding: 14px 0px 0px 45px;
+        padding: 15px 44.3px;
         height: 50px;
         display: inline-block;
         letter-spacing: 1.7px;
